truckload of changes, to conform to JCP
Revtex, only one .tex file, no /figures dir, cover letter, etc

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -47,19 +47,6 @@
 }
 
 
-@Article{ nwfet_app2,
-	Author = "N Ramachandran and D N Larson and P R H Stark and E Hainsworth and J LaBaer",
-	Title = "Emerging tools for real-time label-free detection of interactions on functional protein microarrays",
-	Journal = "FEBS Journal",
-	Year = "2005",
-	Volume = "272",
-	Number = "21",
-	Pages = "5412--5425",
-	Note = "15th Biennial Conference on Methods in Protein Structure Analysis, Seattle, WA, AUG 29-SEP 02, 2004",
-	DOI = "10.1111/j.1742-4685.2005.04971.x",
-	ISSN = "1742-464X"
-}
-
 @Article{ scott,
 	author = "A Scott and D B Janes",
 	collaboration = "",
@@ -114,42 +101,29 @@
 
 @Article{ muga2004,
 	Author = "J G Muga and J P Palao and B Navarro and I L Egusquiza",
-	Title = "{Complex absorbing potentials}",
-	Journal = "{Phys. Rep.-Rev. Sec. Of Phys. Lett.}",
-	Year = "{2004}",
-	Volume = "{395}",
-	Number = "{6}",
-	Pages = "{357--426}",
-	Month = "{JUN}",
-	DOI = "{10.1016/j.physrep.2004.03.002}",
-	ISSN = "{0370-1573}",
-	Unique-ID = "{ISI:000221546800001}"
-}
-
-@Article{ domcke91,
-	Author = "W Domcke",
-	Title = "{Theory Of Resonance And Threshold Effects In Electron Molecule Collisions - The Projection-Operator Approach}",
-	Journal = "{Phys. Rep.-Rev. Sec. Of Phys. Lett.}",
-	Year = "{1991}",
-	Volume = "{208}",
-	Number = "{2}",
-	Pages = "{97--188}",
-	Month = "{OCT}",
-	ISSN = "{0370-1573}",
-	Unique-ID = "{ISI:A1991GP80600001}"
+	Title = "Complex absorbing potentials",
+	Journal = "Phys. Rep.-Rev. Sec. Of Phys. Lett.",
+	Year = "2004",
+	Volume = "395",
+	Number = "6",
+	Pages = "357--426",
+	Month = "JUN",
+	DOI = "10.1016/j.physrep.2004.03.002",
+	ISSN = "0370-1573",
+	Unique-ID = "ISI:000221546800001"
 }
 
 @Article{ moiseyev98,
 	Author = "N Moiseyev",
-	Title = "{Quantum theory of resonances: calculating energies, widths and cross-sections by complex scaling}",
-	Journal = "{Phys. Rep.-Rev. Sec. Of Phys. Lett.}",
-	Year = "{1998}",
-	Volume = "{302}",
-	Number = "{5-6}",
-	Pages = "{212--293}",
-	Month = "{AUG}",
-	ISSN = "{0370-1573}",
-	Unique-ID = "{ISI:000075161100001}"
+	Title = "Quantum theory of resonances: calculating energies, widths and cross-sections by complex scaling",
+	Journal = "Phys. Rep.-Rev. Sec. Of Phys. Lett.",
+	Year = "1998",
+	Volume = "302",
+	Number = "5-6",
+	Pages = "212--293",
+	Month = "AUG",
+	ISSN = "0370-1573",
+	Unique-ID = "ISI:000075161100001"
 }
 
 @Article{ riss_meyer,
@@ -251,7 +225,6 @@
 	year = "1996",
 	doi = "10.1021/jp9533077",
 	URL = "http://pubs.acs.org/doi/abs/10.1021/jp9533077",
-	eprint = "http://pubs.acs.org/doi/pdf/10.1021/jp9533077"
 }
 
 @Book{ rabalais1977,
@@ -293,21 +266,6 @@
 	Unique-ID = "{ISI:A1995QV58700001}"
 }
 
-@Article{ Keinan2006,
-	author = "S Keinan and M Ratner and T Marks",
-	doi = "10.1016/j.cplett.2005.10.018",
-	file = ":D$\backslash$:/papers/molecular switches/nlo/chem\_phys\_lett\_2005\_keinan\_ratner.pdf:pdf",
-	issn = "00092614",
-	journal = "Chem. Phys. Lett.",
-	month = jan,
-	number = "4-6",
-	pages = "293--296",
-	title = "{Excited state enhancement of non-linear optical response in the push--pull imide and diimide chromophores}",
-	url = "http://linkinghub.elsevier.com/retrieve/pii/S0009261405015381",
-	volume = "417",
-	year = "2006"
-}
-
 @Article{ ratner_1992,
 	author = "D Q Li and T J Marks and M A Ratner",
 	title = "Nonlinear optical phenomena in conjugated organic chromophores: theoretical investigations via a .pi.-electron formalism",
@@ -318,31 +276,30 @@
 	year = "1992",
 	doi = "10.1021/j100190a041",
 	URL = "http://pubs.acs.org/doi/abs/10.1021/j100190a041",
-	eprint = "http://pubs.acs.org/doi/pdf/10.1021/j100190a041"
 }
 
 @Article{ turbomole,
 	Author = "R Ahlrichs and M Bar and M Haser and H Horn and C Kolmel",
-	Title = "{Electronic-Structure Calculations On Workstation Computers - The Program System Turbomole}",
-	Journal = "{Chem. Phys. Lett.}",
-	Year = "{1989}",
-	Volume = "{162}",
-	Number = "{3}",
-	Pages = "{165--9}",
-	Month = "{OCT 13}",
-	ISSN = "{0009-2614}",
-	Unique-ID = "{ISI:A1989AX76500001}"
+	Title = "Electronic-Structure Calculations On Workstation Computers - The Program System Turbomole",
+	Journal = "Chem. Phys. Lett.",
+	Year = "1989",
+	Volume = "162",
+	Number = "3",
+	Pages = "165--9",
+	Month = "OCT 13",
+	ISSN = "0009-2614",
+	Unique-ID = "ISI:A1989AX76500001"
 }
 
 @Article{ times,
 	Author = "R Gutierrez and G Fagas and K Richter and F Grossmann and R Schmidt",
-	Title = "{Conductance of a molecular junction mediated by unconventional metal-induced gap states}",
-	Journal = "{Europhys. Lett.}",
-	Year = "{2003}",
-	Volume = "{62}",
-	Number = "{1}",
-	Pages = "{90--96}",
-	Month = "{APR}"
+	Title = "Conductance of a molecular junction mediated by unconventional metal-induced gap states",
+	Journal = "Europhys. Lett.",
+	Year = "2003",
+	Volume = "62",
+	Number = "1",
+	Pages = "90--96",
+	Month = "APR"
 }
 
 @Article{ golden,
@@ -648,7 +605,6 @@ doi = {DOI: 10.1016/S0009-2614(95)01276-1},
 	year = "2005",
 	doi = "10.1021/ja051332c",
 	URL = "http://pubs.acs.org/doi/abs/10.1021/ja051332c",
-	eprint = "http://pubs.acs.org/doi/pdf/10.1021/ja051332c"
 }
 
 @Article{ Tao2006,
@@ -859,7 +815,6 @@ doi = {DOI: 10.1016/S0009-2614(95)01276-1},
 	year = "1996",
 	doi = "10.1021/jp9533077",
 	URL = "http://pubs.acs.org/doi/abs/10.1021/jp9533077",
-	eprint = "http://pubs.acs.org/doi/pdf/10.1021/jp9533077"
 }
 
 @Article{ PBE,
@@ -941,10 +896,7 @@ doi = {DOI: 10.1016/S0009-2614(95)01276-1},
 	number = "12",
 	pages = "3963--3967",
 	year = "2009",
-	doi = "10.1021/nl901860n",
-	note = "PMID: 19904920",
-	URL = "http://pubs.acs.org/doi/abs/10.1021/nl901860n",
-	eprint = "http://pubs.acs.org/doi/pdf/10.1021/nl901860n"
+	doi = "10.1021/nl901860n"
 }
 
 @Article{ Kendall1992,
@@ -1088,7 +1040,6 @@ keywords = "Ab initio calculations"
 }
 	
 
-
 @article{neaton2007amines,
 author = {Quek, S Y and Venkataraman, L and Choi, H J and Louie, S G and Hybertsen, M S and Neaton, J B},
 title = {Amine-Gold Linked Single-Molecule Circuits: Experiment and Theory},
@@ -1097,10 +1048,7 @@ volume = {7},
 number = {11},
 pages = {3477-82},
 year = {2007},
-doi = {10.1021/nl072058i},
-note ={PMID: 17900162},
-URL = {http://pubs.acs.org/doi/abs/10.1021/nl072058i},
-eprint = {http://pubs.acs.org/doi/pdf/10.1021/nl072058i}
+doi = {10.1021/nl072058i}
 }
 
 @Article{anderson,
@@ -1151,7 +1099,6 @@ pages = {143-184},
 year = {2007},
 doi = {10.1146/annurev.physchem.58.052306.144054},
 URL = {http://www.annualreviews.org/doi/abs/10.1146/annurev.physchem.58.052306.144054},
-eprint = {http://www.annualreviews.org/doi/pdf/10.1146/annurev.physchem.58.052306.144054}
 }
 
 @Article{dft_hubbard_transport,
@@ -1228,7 +1175,6 @@ year = "1960",
 note = "",
 issn = "0029-5582",
 doi = "10.1016/0029-5582(60)90048-1",
-url = "http://www.sciencedirect.com/science/article/pii/0029558260900481",
 author = "D J Thouless"
 }
 
@@ -1240,8 +1186,6 @@ number = {5588},
 pages = {1853--6}, 
 year = {2002}, 
 doi = {10.1126/science.1075242}, 
-URL = {http://www.sciencemag.org/content/297/5588/1853.abstract}, 
-eprint = {http://www.sciencemag.org/content/297/5588/1853.full.pdf}, 
 journal = {Science} 
 }
 
@@ -1255,7 +1199,6 @@ journal = {Science}
   year = {1992},
   month = {Apr},
   doi = {10.1103/PhysRevLett.68.2512},
-  url = {http://link.aps.org/doi/10.1103/PhysRevLett.68.2512},
   publisher = {American Physical Society}
 }
 
@@ -1556,8 +1499,6 @@ author = "J.G. Muga and J.P. Palao and B. Navarro and I.L. Egusquiza"
   pages = {12974-12980},
   year = {1996},
   doi = {10.1021/jp960669l},
-  URL = {http://pubs.acs.org/doi/abs/10.1021/jp960669l},
-  eprint = {http://pubs.acs.org/doi/pdf/10.1021/jp960669l}
 }
 
 @article{hohenberg_kohn,
